2007-12-23
Added the "Installer"

2007-12-22
Added the "addword"